# AgingBench

./: .gitignore  LICENSE  readme.md
prototype/: pyproject-lite.toml  pyproject.toml  requirements.txt  setup.cfg
prototype/agingbench/: __init__.py  __main__.py  _lite_entrypoint.py
prototype/agingbench/cli/: __init__.py  loaders.py  runners.py
prototype/agingbench/core/: agent.py  agent_adapter.py  claude_code_adapter.py  controller.py  cursor_adapter.py  full_react_agent.py  llm.py  maintenance.py  model_config.py  retriever.py  runtime_hooks.py  tool_helpers.py  tools.py  vllm_launch.py
prototype/agingbench/diagnostics/: __init__.py  oracle_evaluator.py  partitioner.py
prototype/agingbench/generators/: __init__.py  base.py  dependency_mixin.py  fact_graph.py  pools.py  pressure_config.py  s1_generator.py  s2_generator.py  s3_generator.py  s4_generator.py  s5_generator.py  s6_generator.py  s7_generator.py  s8_swe_bench_generator.py
prototype/agingbench/metrics/: __init__.py  aging.py  aging_card.py  aging_card_migrate.py  aging_card_schema.json  aging_card_validate.py  deep_tier_metrics.py  dependency_scorer.py  g1_metrics.py  g2_metrics.py  g3_metrics.py  g4_metrics.py  self_planning_eval.py  semantic_scorer.py
prototype/agingbench/prompts/: __init__.py  awareness.py  compact_lossy_400w.txt  compact_medium.txt  compact_shrinking.txt  generate_compact_lossy.py  scenario_aware.py
prototype/agingbench/registry/: models.yaml
prototype/agingbench/report/: plot.py
prototype/agingbench/runner/: base.py  diagnostic_mixin.py  s1_runner.py  s2_runner.py  s3_runner.py  s3_runner_unified.py  s4_runner.py  s4_runner_unified.py  s5_runner.py  s6_runner.py  s6_runner_unified.py  s7_runner.py  s8_runner.py  self_planning_runner.py  trace.py
prototype/agingbench/spec/: metric.schema.json  scenario.schema.json  trace.schema.json
prototype/examples/: README.md  byo_agent_minimal.py  byo_memory_minimal.py  langfuse_adapter.py  langsmith_adapter.py  mcp_adapter.py  openai_evals_adapter.py  sut_byo_agent.yaml  sut_byo_memory.yaml
prototype/scripts/: run_claude_code_s7.sh  run_s1.py  run_s2.py  run_s3.py  run_s3_unified.py  run_s4.py  run_s4_unified.py  run_s5.py  run_s6.py  run_s6_unified.py  run_s7.py  run_s8.py
prototype/tests/: constraint_updates.json  test_aging_card.py  test_aging_card_schema.py  test_attribution_modes.py  test_claude_code_errors.py  test_cli_flags.py  test_cursor_adapter.py  test_dependency_score_keys.py  test_lite_entrypoint.py  test_memory_write_patterns.py  test_pluggable.py  test_pressure_externalization.py  test_pressure_runner_wiring.py  test_s1_keyword_and_revision.py  test_s1_react_wiring.py  test_s2_accumulator_probe_offset.py  test_s2_precision_target_refresh.py  test_s2_runner.py  test_s2_update_prepend.py  test_s3_revision_tracking.py  test_s4_dep_recall.py  test_s4_dep_recall_faithful.py  test_s5_keyword_extraction.py  test_s6_revision_sync.py  test_s6_xref_leakage.py  test_s8_agent.py  test_s8_docker_runner.py  test_s8_verifier_probes.py  test_scenario_dispatch.py  test_telemetry_adapters.py  test_telemetry_stub.py  test_telemetry_v11.py
(+429 files in other folders)
