[metadata]
name = agingbench
version = 0.1.0
description = Longitudinal Reliability Benchmark for Memory-Enabled Agents

[options]
packages = find:
python_requires = >=3.9
install_requires =
    torch>=2.0
    transformers>=4.40
    accelerate
    pyyaml
    numpy
    scipy
    matplotlib
    sentence-transformers>=2.6.0

[options.extras_require]
api = litellm
dev = pytest; pytest-cov

[options.packages.find]
include = agingbench*

[options.package_data]
agingbench =
    registry/**/*.yaml
    scenarios/**/*.json
    scenarios/**/*.jsonl
    scenarios/**/*.txt

[options.entry_points]
console_scripts =
    agingbench = agingbench.cli:main
